Test, documentation, dockerfile and others is added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 spring.application.name=starwars-api
+#TODO: en caso de prod cambiar valores por variables de entorno
 swapi.baseurl=https://www.swapi.tech/api
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
